# databasecxx

./: README.md
mongodb/: CMakeLists.txt  main.cpp  mongoDemo  mongodbManager.cpp  mongodbManager.h
mongodb/include/bson/: Makefile  cmake_install.cmake
mongodb/include/jsonsl/: Makefile  cmake_install.cmake
mongodb/include/mongoc/: mongoc-config.h
