cmake_minimum_required(VERSION 3.5) 
PROJECT(mongoDemo)
AUX_SOURCE_DIRECTORY(./ SRC_DIR) 
SET(LIBRARY_OUTPUT_PATH ./) 
ADD_DEFINITIONS( -g -W -Wall -Wno-unused-parameter -Wno-deprecated -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO -DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL -DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++11)
INCLUDE_DIRECTORIES(./include/common ./include/jsonsl ./include/bson ./include/mongoc) 
LINK_DIRECTORIES(./lib)
#ADD_LIBRARY(mongoDemo STATIC ${SRC_DIR})
ADD_EXECUTABLE(mongoDemo ${SRC_DIR})
TARGET_LINK_LIBRARIES(mongoDemo pthread bson-1.0 mongoc-1.0)  
